// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AreaDataDialogComponent when the vm is correct without areaData should render the content if the correct vm is provided 1`] = `
<div
  id="root2"
  ng-version="19.2.9"
>
  <!--container-->
  <!--container-->
</div>
`;

exports[`AreaDataDialogComponent when the vm is not correct should not render the content 1`] = `
<div
  id="root0"
  ng-version="19.2.9"
>
  <!--container-->
</div>
`;
